Trim css rules, fixed issue with sponsor logo alignment and whitespace

--- a/styles/main.css
+++ b/styles/main.css
@@ -18,13 +18,7 @@
   font-style: normal;
 }
 
-html {
-  margin: 0;
-  padding: 0;
-}
-
 body {
-  width: 100%;
   margin: 0;
   background-color: white;
   font-family: "Avenir";
@@ -50,7 +44,6 @@ h5 {
 
 .row {
   display: flex;
-  width: 100%;
 }
 
 .content {
@@ -93,8 +86,20 @@ a.anchor {
 .bean {
   display: flex;
   flex-direction: column;
+  align-items: start;
   width: 30%;
   margin-bottom: 1em;
+}
+
+.sponsors .bean a, .sponsors .bean-small a {
+  flex: 1 1 auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.bean img, .bean-small a {
+  margin: auto;
 }
 
 .bean-small {
@@ -180,27 +185,21 @@ a.anchor {
 footer {
   background-color: #a9d9bc;
   color: white;
-  width: 100%;
   height: 60px;
-  margin: 0;
 }
 
 footer .content {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100%;
 }
 
 footer a {
-  font-family: "LemonMilk";
-  font-size: 1.2em;
-  color: white;
-  text-decoration: none;
   min-width: 60px;
-  height: 100%;
+  display: flex;
 }
 
-footer img {
-  max-height: 100%;
-}
+/* debug 
+* {
+  border: 1px solid red;
+} */
